# offcenter_common

./: .gitignore  CMakeLists.txt  README.md
app/: CMakeLists.txt
app/app_manager/: CMakeLists.txt
app/app_manager/src/: AppManagerApp.cpp  app_manager.cpp
app/distributed_system/manager/: CMakeLists.txt
app/distributed_system/manager/src/: distributed_system_manager.cpp
app/distributed_system/monitor/: CMakeLists.txt
app/distributed_system/monitor/src/: distributed_system_monitor.cpp
app/waitfor_sigint/: CMakeLists.txt
app/waitfor_sigint/src/: WaitforSigintApp.cpp  waitfor_sigint.cpp
lib/: CMakeLists.txt  offcenter-common-config.cmake.in  offcenter_common-config.cmake.in
lib/amqp/: CMakeLists.txt  README.md  offcenter_common_amqp-config.cmake.in
lib/amqp/example/: CMakeLists.txt
lib/amqp/example/src/: amqp_example_activemqcpp.cpp  amqp_example_simple_consumer.cpp  amqp_example_simple_producer.cpp  process_amqp_message_example.cpp
lib/amqp/src/: ConnectionSettings.cpp  Helper.cpp  SessionConsumer.cpp  SessionProducer.cpp  SessionProducerDynamicDestination.cpp  URLSchemeHost.cpp
lib/amqp/test/: CMakeLists.txt
lib/amqp/test/include/: AsyncTopicProducerFixture.hpp  TopicMessageFixture.hpp  TopicProducerFixture.hpp
lib/amqp/test/src/: URLFailover_test.cpp  URLSchemeHost_test.cpp  connection_options_test.cpp  main.cpp
lib/amqp_server/: CMakeLists.txt  offcenter_common_amqp_server-config.cmake.in
lib/amqp_server/example/: CMakeLists.txt
lib/amqp_server/example/include/: AmqpConsumerExampleApp.hpp  AmqpConsumerProducerExampleApp.hpp  AmqpDataElement.hpp  AmqpExampleOptions.hpp  AmqpExampleProgramOptions.hpp  AmqpManagedExampleApp.hpp  AmqpManagerExampleApp.hpp  AmqpProducerExampleApp.hpp
lib/amqp_server/example/src/: AmqpConsumerExampleApp.cpp  AmqpConsumerProducerExampleApp.cpp  AmqpDataElement.cpp  AmqpManagedExampleApp.cpp  AmqpManagerExampleApp.cpp  AmqpProducerExampleApp.cpp  amqp_consumer.cpp  amqp_consumer_producer.cpp  amqp_managed_app.cpp  amqp_manager_app.cpp  amqp_producer.cpp
lib/amqp_server/src/: AmqpServerAppFoundation.cpp  AutoMethodHandler.cpp  AutoMethodPath.cpp  Utility.cpp
lib/amqp_server/test/: CMakeLists.txt  config.ini
lib/amqp_server/test/src/: test_amqp_program_option.cpp  test_auto_method_handler.cpp  test_auto_method_path.cpp
lib/common/: CMakeLists.txt  README.md  offcenter_common-config.cmake.in
lib/common/sandbox/: CMakeLists.txt
lib/common/sandbox/src/: main.cpp
lib/common/src/: Conversions.cpp  DateTime.cpp  DateTimeInterval.cpp  Processes.cpp  Utility.cpp
lib/common/test/: CMakeLists.txt
lib/common/test/src/: conversion_test.cpp  date_time_interval_test.cpp  date_time_test.cpp  main.cpp  test_simulated_command_line.cpp
lib/distributed_system/: CMakeLists.txt  offcenter_common_distributed_system-config.cmake.in
lib/distributed_system/src/: ConsumerDataManager.cpp
lib/distributed_system/test/: CMakeLists.txt
lib/distributed_system/test/include/: SimpleConsumerDataFixture.hpp
lib/distributed_system/test/src/: SimpleConsumerDataFixture.cpp  main.cpp  simple_consumerdata_test.cpp  triple_call_consumerdata_test.cpp
lib/framework/: CMakeLists.txt  offcenter_common_framework-config.cmake.in
lib/framework/example/: CMakeLists.txt
lib/framework/example/src/: framework_example.cpp
lib/framework/src/: AMQPApp.cpp  AdminCommon.cpp  AdminControlAgent.cpp  AdminControlConsumer.cpp  AdminControlController.cpp  AdminControlMessage.cpp  AdminControlProducer.cpp  AdminStatusConsumer.cpp  AdminStatusMessage.cpp  AdminStatusProducer.cpp  AppManager.cpp  BasicAppFoundation.cpp  DistributedLoggingApp.cpp  DistributedStatusApp.cpp  SOCIApp.cpp  SystemStatus.cpp  Utility.cpp
lib/framework/test/: CMakeLists.txt
lib/framework/test/data/: config_basic.cfg
lib/framework/test/include/: BasicAppConfigFileOptions.hpp  BasicAppTest.hpp  BasicAppWithConfigTest.hpp
lib/framework/test/src/: main.cpp  test_admin_control.cpp  test_admin_status.cpp  test_amqp_app.cpp  test_basic_app.cpp  test_basic_app_with_config.cpp  test_distributed_logging_app.cpp  test_distributed_status_app.cpp  test_remote_management_app.cpp
lib/imgui/: CMakeLists.txt
lib/imgui/example/: CMakeLists.txt
lib/imgui/example/include/: ImGuiExampleApp.hpp  ImGuiExampleOptions.hpp  ImGuiProgramOptions.hpp  ImPlotGraphExampleApp.hpp  ImPlotLineExampleApp.hpp  imgui_main.hpp
lib/imgui/example/src/: ImGuiExampleApp.cpp  ImPlotGraphExampleApp.cpp  ImPlotLineExampleApp.cpp  imgui_example.cpp  implot_graph_example.cpp  implot_line_example.cpp
lib/program_options/: CMakeLists.txt  offcenter_common_program_options-config.cmake.in
lib/program_options/example/: CMakeLists.txt  single_option_group.cpp
lib/program_options/example/src/: double_option_group.cpp  single_option_group.cpp
lib/program_options/src/: offcenter_program_options.cpp
lib/program_options/test/: CMakeLists.txt  TestProgramOptionsGroup001.hpp  test_double_program_option_group.cpp  test_single_program_option.cpp
lib/program_options/test/src/: main.cpp  test_double_program_option.cpp  test_double_program_option_group.cpp  test_positional_option_group.cpp
lib/rest_server/: CMakeLists.txt  offcenter_common_rest_server-config.cmake.in
lib/rest_server/example/: CMakeLists.txt
lib/rest_server/example/include/: RestServerExampleApp.hpp  RestServerExampleOptions.hpp  RestServerExampleProgramOptions.hpp
lib/rest_server/example/src/: RestServerExampleApp.cpp  main.cpp
lib/rest_server/src/: AutoMethodHandler.cpp  RestServerAppFoundation.cpp  main.cpp
lib/rest_server/test/: CMakeLists.txt
lib/rest_server/test/src/: main.cpp  (+2 more)
lib/schedule/src/: ScheduledRecurringTask.cpp
lib/soci/: CMakeLists.txt  offcenter_common_soci-config.cmake.in
lib/soci/example/: CMakeLists.txt
lib/soci/src/: MySQLOptions.cpp  Session.cpp  Transaction.cpp
lib/soci/test/: CMakeLists.txt
lib/threading/: CMakeLists.txt  offcenter_common_threading-config.cmake.in
lib/threading/example/: CMakeLists.txt
lib/threading/src/: LoopUntilStopped.cpp  RunningThread.cpp  RunningThreadBlockable.cpp
(+178 files in other folders)
